testing/tests/ui/caller_arguments.stderr
error: expected 3 arguments in `caller`, found 2
 --> InvalidNumberArguments.txt:3:18
       "(\"a\", \"b\") -}}\n    {%- endmacro -%}\n    {%- call(a,b,c) test() -%}\n        {{- a"...
  --> tests/ui/caller_arguments.rs:5:14
   |
5  |       source = r#"
   |  ______________^
6  | |     {% macro test() %}
7  | |         {{- caller("a", "b") -}}
8  | |     {%- endmacro -%}
...  |
11 | |     {%- endcall -%}
12 | |     "#,
   | |______^

error: expected 1 argument in `caller`, found 2
 --> InvalidNumberArguments1.txt:3:18
       "(\"a\", \"b\") -}}\n    {%- endmacro -%}\n    {%- call(a) test() -%}\n        {{- a -}}"...
  --> tests/ui/caller_arguments.rs:20:14
   |
20 |       source = r#"
   |  ______________^
21 | |     {% macro test() %}
22 | |         {{- caller("a", "b") -}}
23 | |     {%- endmacro -%}
...  |
26 | |     {%- endcall -%}
27 | |     "#,
   | |______^

error: expected `)` to close call argument list
 --> <source attribute>:5:15
       "test() -%}\n        {{- a -}}\n    {%- endcall -%}\n    "
  --> tests/ui/caller_arguments.rs:35:14
   |
35 |       source = r#"
   |  ______________^
36 | |     {% macro test() %}
37 | |         {{- caller("a") -}}
38 | |     {%- endmacro -%}
...  |
41 | |     {%- endcall -%}
42 | |     "#,
   | |______^

error: block is not defined for `caller`
 --> CallerInCaller.txt:6:18
       "(a) -}}\n    {%- endcall -%}\n    "
  --> tests/ui/caller_arguments.rs:50:14
   |
50 |       source = r#"
   |  ______________^
51 | |     {% macro test() %}
52 | |         {{- caller("a") -}}
53 | |     {%- endmacro -%}
...  |
56 | |     {%- endcall -%}
57 | |     "#,
   | |______^

error: block is not defined for `caller`
 --> CallerInCaller1.txt:10:21
       "(\"b\") }}\n        {% endcall %}\n        {{- a -}}\n    {%- endcall -%}\n    "
  --> tests/ui/caller_arguments.rs:65:14
   |
65 |       source = r#"
   |  ______________^
66 | |     {% macro test2() %}
67 | |         {{ caller("bb") }}
68 | |     {% endmacro %}
...  |
77 | |     {%- endcall -%}
78 | |     "#,
   | |______^

error: block is not defined for `caller`
 --> JustCaller.txt:1:8
       "()}}"
  --> tests/ui/caller_arguments.rs:86:14
   |
86 |     source = r#"{{caller()}}"#,
   |              ^^^^^^^^^^^^^^^^^

error: failed to parse template source
 --> <source attribute>:3:27
       "= \"b\") }}\n    {%- endmacro -%}\n    {%- call(two, one) test() -%}\n        {{- two"...
   --> tests/ui/caller_arguments.rs:94:14
    |
94  |       source = r#"
    |  ______________^
95  | |     {% macro test() %}
96  | |         {{ caller("a", one = "b") }}
97  | |     {%- endmacro -%}
...   |
100 | |     {%- endcall -%}
101 | |     "#,
    | |______^
